--- a/SSISExecutionManagerReports/ETL Package Execution Status.rdl
+++ b/SSISExecutionManagerReports/ETL Package Execution Status.rdl
@@ -20,7 +20,6 @@
         </QueryParameters>
         <CommandText>SELECT p.[ETLBatchExecutionId],
        p.[ETLBatchName],
-       p.[PhaseExecutionOrderNo],
        p.[ETLPackageId],
        p.[SSISDBExecutionId],
        p.[SSISDBProjectName],
@@ -36,7 +35,7 @@
 FROM   [rpt].[ETLPackageExecutionStatuses] p
 JOIN [rpt].[ETLBatchExecutions] b ON p.[ETLBatchExecutionId] = b.[ETLBatchExecutionId]
 WHERE p.[ETLBatchExecutionId] = @ETLBatchExecutionId
-ORDER  BY Isnull([ExecutionStartDateTime], '9999-12-31') , [PhaseExecutionOrderNo], [SSISDBProjectName]
+ORDER  BY Isnull([ExecutionStartDateTime], '9999-12-31') , [SSISDBProjectName]
 
 OPTION (HASH GROUP)</CommandText>
         <rd:UseGenericDesigner>true</rd:UseGenericDesigner>
@@ -50,10 +49,7 @@ OPTION (HASH GROUP)</CommandText>
           <DataField>ETLBatchName</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="PhaseExecutionOrderNo">
-          <DataField>PhaseExecutionOrderNo</DataField>
-          <rd:TypeName>System.Int32</rd:TypeName>
-        </Field>
+        
         <Field Name="ETLPackageId">
           <DataField>ETLPackageId</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
