--- a/SSISExecutionManagerReports/ETL Package Execution Status.rdl
+++ b/SSISExecutionManagerReports/ETL Package Execution Status.rdl
@@ -36,8 +36,7 @@ FROM   [rpt].[ETLPackageExecutionStatuses] p
 JOIN [rpt].[ETLBatchExecutions] b ON p.[ETLBatchExecutionId] = b.[ETLBatchExecutionId]
 WHERE p.[ETLBatchExecutionId] = @ETLBatchExecutionId
 ORDER  BY Isnull([ExecutionStartDateTime], '9999-12-31') , [SSISDBProjectName]
-
-OPTION (HASH GROUP)</CommandText>
+</CommandText>
         <rd:UseGenericDesigner>true</rd:UseGenericDesigner>
       </Query>
       <Fields>
@@ -49,7 +48,6 @@ OPTION (HASH GROUP)</CommandText>
           <DataField>ETLBatchName</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        
         <Field Name="ETLPackageId">
           <DataField>ETLPackageId</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
